--- a/assets/css/ui.css
+++ b/assets/css/ui.css
@@ -59,6 +59,30 @@
 
 .nova-radio-label-orange:hover .nova-checked.disabled { background-position: -80px 0; }
 
+.nova-radio-label-bg .nova-radio { width: 16px; height: 16px; background-position: 0 -120px; }
+
+.nova-radio-label-bg .nova-radio.nova-checked { background-position: 0 -160px; }
+
+.nova-radio-label-bg .nova-radio.nova-checked.disabled { background-position: -80px -20px; }
+
+.nova-radio-label-bg:hover .nova-radio { background-position: 0 -140px; }
+
+.nova-radio-label-bg:hover .nova-radio.nova-checked { background-position: 0 -160px; }
+
+.nova-radio-label-bg:hover .nova-checked.disabled { background-position: -80px -20px; }
+
+.nova-radio-label-bg.nova-radio-label-orange .nova-radio { background-position: 0 -120px; }
+
+.nova-radio-label-bg.nova-radio-label-orange .nova-radio.nova-checked { background-position: -20px -160px; }
+
+.nova-radio-label-bg.nova-radio-label-orange .nova-radio.nova-checked.disabled { background-position: -80px -20px; }
+
+.nova-radio-label-bg.nova-radio-label-orange:hover .nova-radio { background-position: -20px -140px; }
+
+.nova-radio-label-bg.nova-radio-label-orange:hover .nova-radio.nova-checked { background-position: -20px -160px; }
+
+.nova-radio-label-bg.nova-radio-label-orange:hover .nova-checked.disabled { background-position: -80px -20px; }
+
 .nova-select { cursor: default; width: 188px; line-height: 28px; }
 
 .nova-select.opened { position: relative; }
