--- a/scss/calendar.scss
+++ b/scss/calendar.scss
@@ -962,6 +962,8 @@ $img-ico2x: url(../../img/lv/icon@2x.png);
     .calmiddle {
       background-color: #eff8fc;
     }
+    .nodate,
+    .nodate:hover,
     .caldisabled,
     .caldisabled:hover {
       color: #999999;
