--- a/scss/nova-calendar.scss
+++ b/scss/nova-calendar.scss
@@ -966,6 +966,8 @@ $img-ico2x: url(../../img/lv/icon@2x.png);
     .nova-calendar-middle {
       background-color: #eff8fc;
     }
+    .nodate,
+    .nodate:hover,
     .nova-calendar-disabled,
     .nova-calendar-disabled:hover {
       color: #999999;
